pi-cluster/cluster/apps/zigbee2mqtt/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: zigbee2mqtt
  namespace: zigbee2mqtt
  labels:
    app: zigbee2mqtt
spec:
  selector:
    app: zigbee2mqtt
  ports:
    - name: http
      targetPort: http
      protocol: TCP
      port: 8080
